# archlinux-hyprland-config-python

./: .gitignore  README.md  pyproject.toml
cli/archlinux_packages/: pacman.py
tests/: test_pacman.py
